Salesforce LWC/force-app/main/default/objects/Contact/fields/Agent_User__c.field-meta.xml
<CustomField>
    <fullName>Agent_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce User record for this agent</description>
    <label>Agent User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>