Salesforce LWC/force-app/main/default/objects/Contact/fields/Default_Commission_Split__c.field-meta.xml
<CustomField>
    <fullName>Default_Commission_Split__c</fullName>
    <defaultValue>40</defaultValue>
    <label>Default Commission Split</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>