Salesforce LWC/force-app/main/default/objects/Contact/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <label>Rank</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>