Salesforce LWC/force-app/main/default/objects/Contact/fields/Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Office</label>
    <referenceTo>Sales_Office__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>