Salesforce LWC/force-app/main/default/objects/Contact/fields/Transection_Type__c.field-meta.xml
<CustomField>
    <fullName>Transection_Type__c</fullName>
    <label>Transection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>withdraw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>