Salesforce LWC/force-app/main/default/objects/Contact/fields/Year_to_Date_Total_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Year_to_Date_Total_Commissions__c</fullName>
    <description>The total amount of commissions earned by this Agent during the 
current year</description>
    <label>Year to Date Total Commissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>