Salesforce LWC/force-app/main/default/objects/Contact/fields/Year_to_Date_Total_Sales__c.field-meta.xml
<CustomField>
    <fullName>Year_to_Date_Total_Sales__c</fullName>
    <description>The total amount of sales closed by the Agent during the current year</description>
    <label>Year to Date Total Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>